css color,typography & selector

--- a/css/index.html
+++ b/css/index.html
@@ -3,44 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Page with style</title>
-
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-    <header class="navbar">
-        <h1>Brand</h1>
-        <ul>
-            <li>
-                <a href="">Home</a>
-            </li>
-            <li>
-                <a href="">About</a>
-            </li>
-            <li>
-                <a href="">Domain</a>
-            </li>
-            <li>
-                <a href="">Hosting</a>
-            </li>
-        </ul>
-        <button>Get Started</button>
+    <header class="top-heading">
+        Title
     </header>
-    <main>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt suscipit eos exercitationem esse voluptatibus quisquam unde blanditiis minima modi. Quia sed totam odit, non nam natus eos soluta repellat blanditiis?
-    </main>
+    <section class="section1">
+        <h2 class="heading">
+           HEADING
+        </h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium illo qui atque, aliquid corrupti magnam vel, ipsum, eveniet error veritatis omnis cumque dicta tempore odio voluptatum tenetur quo! Odio, expedita?</p>
+    </section>
     <footer>
-        <h1>Footer</h1>
+        Footer
     </footer>
 
     <div class="box">
         <div class="child">
-            Hello
-        </div>
-    </div>
-    <div class="box">
-        <div class="child">
-            Hello
+
         </div>
     </div>
 </body>
