--- a/css/index.html
+++ b/css/index.html
@@ -1,29 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <header class="top-heading">
-        Title
+        <h1>
+            CSS
+        </h1>
+        <ul>
+            <li>
+                <a href="">About</a>
+            </li>
+            <li>
+                <a href="">Home</a>
+            </li>
+            <li>
+                <a href="">Blogs</a>
+            </li>
+        </ul>
     </header>
     <section class="section1">
         <h2 class="heading">
-           HEADING
+            HEADING
         </h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium illo qui atque, aliquid corrupti magnam vel, ipsum, eveniet error veritatis omnis cumque dicta tempore odio voluptatum tenetur quo! Odio, expedita?</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium illo qui atque, aliquid corrupti magnam
+            vel, ipsum, eveniet error veritatis omnis cumque dicta tempore odio voluptatum tenetur quo! Odio, expedita?
+        </p>
     </section>
     <footer>
         Footer
     </footer>
 
-    <div class="box">
-        <div class="child">
+    <ul class="list">
+        <li>Apple</li>
+        <li>Apple</li>
+        <li>Apple</li>
+        <li>Apple</li>
+        <li>Apple</li>
+        <li>Apple</li>
+        <li>Apple</li>
+        <li>Apple</li>
+        <li>Apple</li>
+        <li>Apple</li>
+    </ul>
 
-        </div>
+    <div class="box">
+
     </div>
+
+    <p class="display-p">
+        Lorem ipsum <span>dolor</span> sit, amet consectetur adipisicing elit. Fuga, deserunt enim excepturi rem explicabo placeat a alias maiores blanditiis vitae hic doloremque quibusdam necessitatibus. Consectetur, quae! Iste facilis libero at.
+    </p>
+
+
+
+    <article class="article-float">
+        <img src="../drinks-svgrepo-com.svg" alt="" width="100px">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti placeat dolore aspernatur sint repellat fuga quis minima! Similique sit placeat soluta quam doloremque, exercitationem molestiae alias fugit reprehenderit pariatur iure.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ea sequi quasi odio commodi earum enim unde voluptatem odit debitis? Quidem omnis praesentium assumenda excepturi quae laboriosam deserunt nemo culpa.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi ab ullam repudiandae nemo. Tempore dolorum officiis a vero consequuntur, non veniam quidem nihil delectus quaerat molestiae qui quos sint inventore.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptate error quod temporibus. Debitis enim molestiae iusto! Repudiandae ullam quam officiis quidem, quaerat ex natus repellat doloremque, illo, accusantium nisi!
+    </article>
+
+
+    <article class="col">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, voluptatum architecto dolores aperiam optio eos libero in cupiditate debitis amet quo, blanditiis sunt porro temporibus esse nihil! Reprehenderit, itaque commodi.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptatum impedit vitae earum voluptates voluptas expedita adipisci rem, dolor, sapiente ullam cumque mollitia quibusdam numquam hic quis. Recusandae, eos dolorum!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ullam velit vitae, officia dolores fugiat ut, officiis cum assumenda architecto iure, consectetur pariatur repudiandae molestiae qui veritatis ratione esse voluptates?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem rem recusandae est suscipit nulla expedita ipsum placeat distinctio facere sint perferendis vitae quo pariatur, error incidunt quasi ratione dolores perspiciatis!</p>
+    </article>
+
 </body>
+
 </html>
