--- a/Projects/js-p/index.html
+++ b/Projects/js-p/index.html
@@ -11,5 +11,13 @@
     <div>
         
     </div>
+
+
+    <form action="">
+        <input type="text" placeholder="name">
+        
+
+</form>
+    <button id="btn">Fetch data</button>
 </body>
 </html>
